[gd_scene load_steps=19 format=3 uid="uid://dsn6ofk6ltksd"]

[ext_resource type="Theme" uid="uid://cirsgegfbmvdq" path="res://core/theme.tres" id="1_kkdxd"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="2_cg38j"]
[ext_resource type="PackedScene" uid="uid://m05j8d1li5m3" path="res://ui/unit_card.tscn" id="2_qxiru"]
[ext_resource type="Script" path="res://scripts/resource_data.gd" id="3_wrk08"]

[sub_resource type="Gradient" id="Gradient_ggbrq"]
offsets = PackedFloat32Array(0.898148, 0.967593)
colors = PackedColorArray(1, 1, 1, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1x23i"]
gradient = SubResource("Gradient_ggbrq")
width = 500
height = 500
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_8ylwo"]
offsets = PackedFloat32Array(0.666667, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bk1ga"]
gradient = SubResource("Gradient_8ylwo")
width = 128
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_at7is"]
offsets = PackedFloat32Array(0.717593, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c2v7s"]
gradient = SubResource("Gradient_at7is")
width = 200
height = 200
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Gradient" id="Gradient_pc7ph"]
offsets = PackedFloat32Array(0.421569, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_01148"]
gradient = SubResource("Gradient_pc7ph")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_2py21"]
offsets = PackedFloat32Array(0.887255, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jwmc4"]
gradient = SubResource("Gradient_2py21")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_n4gmr"]
offsets = PackedFloat32Array(0.740196, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ktfj6"]
gradient = SubResource("Gradient_n4gmr")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Gradient" id="Gradient_yqppg"]
offsets = PackedFloat32Array(0.411765, 1)
colors = PackedColorArray(0.446777, 0.446777, 0.446777, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_x8yj8"]
gradient = SubResource("Gradient_yqppg")
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="HUD" type="NinePatchRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kkdxd")
texture = SubResource("GradientTexture2D_1x23i")
region_rect = Rect2(0, 0, 500, 500)
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
script = ExtResource("2_cg38j")

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InnerMarginBox" type="Control" parent="Margins"]
layout_mode = 2
mouse_filter = 1

[node name="MenuButton" type="TextureButton" parent="Margins/InnerMarginBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.067
anchor_bottom = 0.059
offset_right = 4.71999
offset_bottom = 5.0
texture_normal = SubResource("GradientTexture2D_bk1ga")

[node name="CenterContainer" type="CenterContainer" parent="Margins/InnerMarginBox/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Margins/InnerMarginBox/MenuButton/CenterContainer"]
layout_mode = 2
text = "MENU"
horizontal_alignment = 1

[node name="ResourceContainer" type="PanelContainer" parent="Margins/InnerMarginBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.437
anchor_right = 0.563
anchor_bottom = 0.082
offset_left = -0.580017
offset_right = 0.579956
grow_horizontal = 2

[node name="Background" type="ColorRect" parent="Margins/InnerMarginBox/ResourceContainer"]
layout_mode = 2
color = Color(0.239216, 0.239216, 0.239216, 0.666667)

[node name="MarginContainer" type="MarginContainer" parent="Margins/InnerMarginBox/ResourceContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ResourceData" type="HBoxContainer" parent="Margins/InnerMarginBox/ResourceContainer/MarginContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("3_wrk08")

[node name="Aether" type="VBoxContainer" parent="Margins/InnerMarginBox/ResourceContainer/MarginContainer/ResourceData"]
layout_mode = 2

[node name="Title" type="Label" parent="Margins/InnerMarginBox/ResourceContainer/MarginContainer/ResourceData/Aether"]
layout_mode = 2
text = "Aether"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="Margins/InnerMarginBox/ResourceContainer/MarginContainer/ResourceData/Aether"]
layout_mode = 2
text = "-
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RPS" type="Label" parent="Margins/InnerMarginBox/ResourceContainer/MarginContainer/ResourceData/Aether"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Empyrium" type="VBoxContainer" parent="Margins/InnerMarginBox/ResourceContainer/MarginContainer/ResourceData"]
layout_mode = 2

[node name="Title" type="Label" parent="Margins/InnerMarginBox/ResourceContainer/MarginContainer/ResourceData/Empyrium"]
layout_mode = 2
text = "Empyrium
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="Margins/InnerMarginBox/ResourceContainer/MarginContainer/ResourceData/Empyrium"]
layout_mode = 2
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RPS" type="Label" parent="Margins/InnerMarginBox/ResourceContainer/MarginContainer/ResourceData/Empyrium"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minimap" type="NinePatchRect" parent="Margins/InnerMarginBox"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 0.109
anchor_bottom = 1.0
offset_right = -0.560013
grow_vertical = 0
mouse_filter = 0
texture = SubResource("GradientTexture2D_c2v7s")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="UnitSelection" type="HFlowContainer" parent="Margins/InnerMarginBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.9
anchor_right = 0.859
anchor_bottom = 1.0
offset_left = 0.319992
offset_top = -6.10352e-05
offset_right = 0.719971
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="UnitCard" parent="Margins/InnerMarginBox/UnitSelection" instance=ExtResource("2_qxiru")]
layout_mode = 2

[node name="ActionsContainer" type="GridContainer" parent="Margins/InnerMarginBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.854
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.8398
offset_top = 14.8
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 0
columns = 4

[node name="ActionButton" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton2" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton3" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton4" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton5" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton6" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton7" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton8" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton9" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton10" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton11" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="ActionButton12" type="TextureButton" parent="Margins/InnerMarginBox/ActionsContainer"]
layout_mode = 2
disabled = true
texture_normal = SubResource("GradientTexture2D_01148")
texture_pressed = SubResource("GradientTexture2D_jwmc4")
texture_hover = SubResource("GradientTexture2D_ktfj6")
texture_disabled = SubResource("GradientTexture2D_x8yj8")
stretch_mode = 0

[node name="TopEdge" type="Control" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.023
offset_left = 25.0
offset_right = -25.0
offset_bottom = 0.16
grow_horizontal = 2
mouse_filter = 1

[node name="BottomEdge" type="Control" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchor_top = 0.977
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -0.160034
offset_right = -25.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="LeftEdge" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.013
anchor_bottom = 1.0
offset_top = 25.0
offset_right = 0.039999
offset_bottom = -25.0
grow_vertical = 2
mouse_filter = 1

[node name="RightEdge" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.987
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.0400391
offset_top = 25.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="TopLeft" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.013
anchor_bottom = 0.023
offset_right = 0.039999
offset_bottom = 0.159998

[node name="TopRight" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.987
anchor_right = 1.0
anchor_bottom = 0.023
offset_left = -0.0400391
offset_bottom = 0.159998
grow_horizontal = 0

[node name="BottomLeft" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.977
anchor_right = 0.013
anchor_bottom = 1.0
offset_top = -0.160034
offset_right = 0.039999
grow_vertical = 0

[node name="BottomRight" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -25.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="pressed" from="Margins/InnerMarginBox/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="mouse_entered" from="TopEdge" to="." method="_on_mouse_entered" binds= [Vector2i(0, -1)]]
[connection signal="mouse_exited" from="TopEdge" to="." method="_on_mouse_exited" binds= [Vector2i(0, -1)]]
[connection signal="mouse_entered" from="BottomEdge" to="." method="_on_mouse_entered" binds= [Vector2i(0, 1)]]
[connection signal="mouse_exited" from="BottomEdge" to="." method="_on_mouse_exited" binds= [Vector2i(0, 1)]]
[connection signal="mouse_entered" from="LeftEdge" to="." method="_on_mouse_entered" binds= [Vector2i(-1, 0)]]
[connection signal="mouse_exited" from="LeftEdge" to="." method="_on_mouse_exited" binds= [Vector2i(-1, 0)]]
[connection signal="mouse_entered" from="RightEdge" to="." method="_on_mouse_entered" binds= [Vector2i(1, 0)]]
[connection signal="mouse_exited" from="RightEdge" to="." method="_on_mouse_exited" binds= [Vector2i(1, 0)]]
[connection signal="mouse_entered" from="TopLeft" to="." method="_on_mouse_entered" binds= [Vector2i(-1, -1)]]
[connection signal="mouse_exited" from="TopLeft" to="." method="_on_mouse_exited" binds= [Vector2i(-1, -1)]]
[connection signal="mouse_entered" from="TopRight" to="." method="_on_mouse_entered" binds= [Vector2i(1, -1)]]
[connection signal="mouse_exited" from="TopRight" to="." method="_on_mouse_exited" binds= [Vector2i(1, -1)]]
[connection signal="mouse_entered" from="BottomLeft" to="." method="_on_mouse_entered" binds= [Vector2i(-1, 1)]]
[connection signal="mouse_exited" from="BottomLeft" to="." method="_on_mouse_exited" binds= [Vector2i(-1, 1)]]
[connection signal="mouse_entered" from="BottomRight" to="." method="_on_mouse_entered" binds= [Vector2i(1, 1)]]
[connection signal="mouse_exited" from="BottomRight" to="." method="_on_mouse_exited" binds= [Vector2i(1, 1)]]
